업로드2 일반로그인 완료

--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <h1>로그인 페이지</h1>
-<form>
-    <input type="text" name="userId" placeholder="아이디 입력"> <br/>
+<form action="/login" method="post">
+    <input type="text" name="username" placeholder="아이디 입력"> <br/>
     <input type="password" name="password" placeholder="비밀번호 입력"> <br/>
     <button>로그인</button>
 </form>
