--- a/src/main/resources/templates/joinForm.html
+++ b/src/main/resources/templates/joinForm.html
@@ -7,7 +7,7 @@
 <body>
 <h1>회원가입 페이지</h1>
 <form action="/join" method="post">
-  <input type="text" name="userId" placeholder="아이디"> <br/>
+  <input type="text" name="username" placeholder="아이디"> <br/>
   <input type="password" name="password" placeholder="비밀번호"> <br/>
   <button>회원가입</button>
 </form>
