업로드3 OAuth 로그인(1)

--- a/src/main/resources/templates/joinForm.html
+++ b/src/main/resources/templates/joinForm.html
@@ -9,6 +9,7 @@
 <form action="/join" method="post">
   <input type="text" name="username" placeholder="아이디"> <br/>
   <input type="password" name="password" placeholder="비밀번호"> <br/>
+  <input type="email" name="email" placeholder="이메일"> <br/>
   <button>회원가입</button>
 </form>
 </body>
