--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -11,6 +11,7 @@
     <input type="password" name="password" placeholder="비밀번호 입력"> <br/>
     <button>로그인</button>
 </form>
+<a href="/oauth2/authorization/google">구글 로그인</a>
 <a href="/join">아직 가입하지 않으셨나요?</a>
 </body>
 </html>
