--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -12,6 +12,7 @@
     <button>로그인</button>
 </form>
 <a href="/oauth2/authorization/google">구글 로그인</a>
+<a href="/oauth2/authorization/naver">네이버 로그인</a>
 <a href="/join">아직 가입하지 않으셨나요?</a>
 </body>
 </html>
